--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Vue</title>
 </head>
 <body>
-    
+  <div id="app"></div>
+  <script src="https://unpkg.com/vue@next" defer></script>
+  <script src="js/main.js" defer></script>
 </body>
 </html>
